# study-slack-remote-mcp

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README-docker.md  README.md  apprunner-uv.yaml.example  apprunner.yaml  auth_server.py  build-and-push.sh  create-github-apprunner.json  docker-compose.yml  http_endpoints.py  main.py  parameter_store.py  pyproject.toml  requirements.txt  server.py  session_manager.py  slack_auth_provider.py  slack_oauth_provider.py  storage_dynamodb.py  storage_interface.py  test_fastmcp_client.py  token_storage.py  token_verifier.py
infrastructure/: .gitignore  DEPLOY_GUIDE.md  README.md  build-and-push.sh  cdk.json  deploy-prerequisites.sh  deploy.sh  generate-self-signed-cert.sh  package-lock.json  package.json  tsconfig.json
infrastructure/lib/: prerequisites-stack.ts  slack-mcp-stack.ts
tests/: README.md  conftest.py  test_mcp_tools.py  test_slack_oauth_provider.py  test_storage.py
